# segbot

./: .gitignore  .travis.rosinstall  .travis.yml  LICENSE  README.md  stack.xml
launch_segbot_base/: CMakeLists.txt  package.xml
launch_segbot_base/launch/: common.launch  v2.launch  v3.launch
only_segbot_arm/: CHANGELOG.rst  CMakeLists.txt  package.xml
only_segbot_base/: CHANGELOG.rst  CMakeLists.txt  package.xml
segbot/: CHANGELOG.rst  CMakeLists.txt  package.xml
segbot_arm_joystick/: CMakeLists.txt  README.md  package.xml
segbot_arm_joystick/launch/: segbot_arm_joystick.launch
segbot_arm_joystick/src/: segbot_arm_joystick.cpp
segbot_arm_manipulation/: CMakeLists.txt  package.xml  setup.py
segbot_arm_manipulation/action/: Handover.action  LiftVerify.action  ObjReplacement.action  Press.action  Push.action  Shake.action  TabletopApproach.action  TabletopGrasp.action
segbot_arm_manipulation/data/: jointspace_position_db.txt  mico_jointspace_position_db.txt  mico_toolspace_position_db.txt
segbot_arm_manipulation/launch/: segbot_arm_explore.launch  segbot_arm_manipulation.launch
segbot_arm_manipulation/scripts/: arm_actions.py
segbot_arm_manipulation/src/: Mico.cpp  MicoManager.cpp  arm_actions.py  arm_lift_verify_as.cpp  arm_press_as.cpp  arm_push_as.cpp  arm_shake_as.cpp  arm_utils.cpp  grasp_utils.cpp  ispy_arm_server.cpp  nav_safety_service.cpp  position_record.cpp  segbot_handover_as.cpp  segbot_obj_replacement_as.cpp  segbot_table_approach_as.cpp  segbot_tabletop_grasp_as.cpp  trajectory_record.cpp
segbot_arm_manipulation/srv/: iSpyDetectTouch.srv  iSpyFaceTable.srv  iSpyReorderClouds.srv  iSpyTouch.srv
segbot_arm_tasks/: CMakeLists.txt  package.xml
segbot_arm_tasks/launch/: object_delivery.launch
segbot_arm_tasks/src/: object_handover_delivery_task.cpp  object_table_delivery_task.cpp  object_to_office_task.cpp
segbot_arm_tutorials/: CMakeLists.txt  package.xml
segbot_arm_tutorials/src/: ex10_advanced_moveit.cpp  ex1_subscribing_to_topics.cpp  ex2_gripper_control.cpp  ex3_home_arm.cpp  ex4_cartesian_vel_control.cpp  ex5_angular_vel_control.cpp  ex6_detect_force.cpp  ex7_cartesian_pose_control.cpp  ex8_joint_angles_control.cpp  ex9_waypoints.cpp
segbot_bringup/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
segbot_bringup/config/: segway_110_params.yaml
segbot_bringup/launch/: base.launch  joy_segway.launch  segbot.launch  segbot1.launch  segbot_asst1.launch  segbot_bu.launch  segbot_description.launch  segbot_description_tf.launch  segbot_hokuyo.launch  segbot_iriss.launch  segbot_kinect.launch  segbot_kinect_rgbd_scan.launch  segbot_kinect_scan.launch  segbot_navigation.launch  segbot_v1.launch  segbot_v2.arm.launch  segbot_v2.launch  segbot_v3.launch  segbot_v4.launch  segbot_v5.launch  segway.launch  segway_base.launch  wiimote.launch
segbot_bringup/rviz/: bringup.rviz
segbot_bringup/scripts/: get_addr  segbot_v3_controller  teleop_twist_keyboard  teleop_twist_keyboard.py  udev_install
segbot_bringup/src/: joint_state_listener.cpp  robot_state_publisher.cpp
segbot_bringup/udev/: 99-arduino.rules  99-hokuyo.rules  99-pololu.rules  99-segway_rmp.rules
segbot_common/: CMakeLists.txt  package.xml
segbot_common/src/: structures.cpp
segbot_description/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
segbot_description/gazebo/: common.gazebo.xacro  full_collision.gazebo.xacro  segbot.gazebo.xacro  simple_collision.gazebo.xacro
segbot_description/meshes/: rmp50-base-link.dae  rmp50-castor-link.dae  rmp50-castor-wheel.dae  rmp50-left-wheel.dae  rmp50-right-wheel.dae
segbot_description/robots/: segbot.urdf.xacro  segbot_asst1.urdf.xacro  segbot_bu.urdf.xacro  segbot_default.xacro  segbot_full_kinect.urdf.xacro  segbot_hokuyo.urdf.xacro  segbot_iriss.urdf.xacro  segbot_kinect.urdf.xacro  segbot_navigation.urdf.xacro  segbot_simple_hokuyo.urdf.xacro  segbot_simple_kinect.urdf.xacro  segbot_v1.hokuyo_only.urdf.xacro  segbot_v1.no_sensors.urdf.xacro  segbot_v1.urdf.xacro  segbot_v2.arm.urdf.xacro  segbot_v2.arm.urdf.xacro.urdf  segbot_v2.urdf.xacro  segbot_v3.urdf.xacro  segbot_v4-prism.urdf.xacro  segbot_v4.urdf.xacro  segbot_v5.urdf.xacro
segbot_description/scripts/: full_gazebo_model  get_full_gazebo_model  get_simple_gazebo_model
segbot_description/test/: hokuyo_mount.test.xacro  kinect_mount.test.xacro  segbot_chassis.test.xacro  test.sh  test.urdf  urdf.rviz  velodyne_mount.test.xacro  xacrodisplay.launch
segbot_description/urdf/: common.urdf.xacro  gazebo.xacro  gazebo_common.xacro  gazebo_simple.xacro  kinect.urdf.xacro  segbot.urdf.xacro  segbot_base.arm.urdf.xacro  segbot_base.urdf.xacro  segbot_base.xacro  segbot_chassis.urdf.xacro  segbot_wheel.urdf.xacro  segbot_wheel.xacro  segway_110_base.urdf.xacro
segbot_firmware/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
segbot_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
segbot_gazebo/config/: multiple_segbots.rviz
segbot_gazebo/launch/: multiple_segbots.launch  segbot_mobile_base.launch  segbot_navigation.launch  segbot_test_world.launch  segbot_test_world_map_server.launch
segbot_gazebo/maps/: segbot_test_world.yaml
segbot_gazebo/worlds/: segbot_test_world.world
segbot_gui/: CHANGELOG.rst  CMakeLists.txt  package.xml  plugin.xml
segbot_gui/scripts/: question_dialog_plugin
segbot_led/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
segbot_led/launch/: segbot_led.launch  segbot_led_v3.launch
segbot_led/ledcomm/: ledcom.h
segbot_led/src/: led_control_server.cpp
segbot_led/test/: test.cpp
segbot_logical_translator/: CHANGELOG.rst  CMakeLists.txt  package.xml
segbot_logical_translator/src/: .gitignore
segbot_navigation/: CHANGELOG.rst  CMakeLists.txt  package.xml
segbot_navigation/launch/: README.md  amcl.launch  gmapping.launch  gmapping_bu.launch  gmapping_v3.launch  rviz.launch  (+16 more)
segbot_sensors/: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.rst  mainpage.dox  manifest.xml  nodelets.xml  package.xml  segbot_sensors_plugins.xml  sendmail_configure.sh  setup.py
(+354 files in other folders)
