<package format="2">
  <name>launch_segbot_base</name>
  <version>0.3.3</version>
  <description>
    Top-level ROS launch scripts for the Building-Wide Intelligence
    (BWI) project of the University of Texas at Austin. 

    This package launches the base for any of the various BWI segbot
    models.
  </description>

  <license>BSD</license>

  <url type="repository">https://github.com/utexas-bwi/segbot</url>
  <url type="bugtracker">https://github.com/utexas-bwi/segbot/issues</url>

  <maintainer email="jack.oquin@gmail.com">Jack O'Quin</maintainer>
  <author>Jack O'Quin</author>
  <author>Piyush Khandelwal</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>bwi_kr_execution</exec_depend>
  <exec_depend>bwi_rqt_plugins</exec_depend>
  <exec_depend>bwi_virtour</exec_depend>
  <exec_depend>multi_level_map_server</exec_depend>
  <exec_depend>multi_level_map_utils</exec_depend>
  <exec_depend>segbot_bringup</exec_depend> <!-- eliminate this depend -->
  <exec_depend>segbot_navigation</exec_depend>
  <exec_depend>utexas_gdc</exec_depend>

  <test_depend>roslaunch</test_depend>

</package>
