<package format="2">
  <name>only_segbot_base</name>
  <version>0.3.5</version>
  <description>
    ROS packages for controlling the bases of various Segway robot
    platforms maintained by the Learning Agents Research Group (LARG),
    AI Laboratory, Department of Computer Science, University of Texas
    at Austin.
  </description>

  <license>BSD</license>

  <url type="repository">https://github.com/utexas-bwi/segbot.git</url>
  <url type="bugtracker">https://github.com/utexas-bwi/segbot/issues</url>

  <author email="jack.oquin@gmail.com">Jack O'Quin</author>
  <maintainer email="jack.oquin@gmail.com">Jack O'Quin</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>segbot_bringup</exec_depend>
  <exec_depend>segbot_description</exec_depend>
  <exec_depend>segbot_firmware</exec_depend>
  <exec_depend>segbot_gazebo</exec_depend>
  <exec_depend>segbot_led</exec_depend>
  <exec_depend>segbot_navigation</exec_depend>
  <exec_depend>segbot_sensors</exec_depend>
  <exec_depend>segbot_simulation_apps</exec_depend>

  <export>
    <metapackage/>
    <architecture_independent/>
  </export>

</package>
