<?xml version="1.0"?>
<package>
  <name>segbot_arm_joystick</name>
  <version>0.0.1</version>
  <description>Xbox controller for BWI Kinova arm, Segway base</description>

  <maintainer email="benjamin.z.singer@utexas.edu">Benjamin Singer</maintainer>
  <maintainer email="palak_hirpara@yahoo.com">Palak Hirpara</maintainer>


  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>bwi_services</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>kinova_msgs</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>segbot_arm_perception</build_depend>
  <build_depend>moveit_utils</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>segbot_arm_manipulation</build_depend>
  <build_depend>bwi_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>pcl_ros</build_depend>

  <run_depend>actionlib_msgs</run_depend>
  <run_depend>bwi_msgs</run_depend>
  <run_depend>bwi_services</run_depend>
  <run_depend>kinova_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>moveit_utils</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>segbot_arm_manipulation</run_depend>
  <run_depend>segbot_arm_perception</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>

  </export>
</package>
