<?xml version="1.0"?>
<package format="2">
  <name>segbot_arm_manipulation</name>
  <version>0.0.1</version>
  <description>Segbot arm manipulation</description>

  <maintainer email="jsinapov@cs.utexas.edu">Jivko Sinapov</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>agile_grasp</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>kinova_msgs</depend>
  <depend>kinova_driver</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_utils</depend>
  <depend>moveit_msgs</depend>
  <depend>move_base_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>segbot_arm_perception</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>



  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <export></export>
</package>
