<?xml version="1.0"?>
<package format="2">
  <name>segbot_arm_tasks</name>
  <version>0.0.0</version>
  <description>This package holds independent tasks that can be performed by the arm. Initial examples will be actionlib servers with tasks such as shake, lift, etc.</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="maxsvetlik@gmail.com">Maxwell J Svetlik</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GPLv3</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>actionlib_msgs</depend>
  <depend>bwi_kr_execution</depend>
  <depend>bwi_msgs</depend>
  <depend>bwi_services</depend>
  <depend>kinova_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>segbot_arm_manipulation</depend>
  <depend>segbot_arm_perception</depend>
  <depend>std_msgs</depend>
  <depend>message_generation</depend>
  <depend>move_base_msgs</depend>
  <depend>moveit_utils</depend>
  <depend>moveit_msgs</depend>





  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
