<?xml version="1.0"?>
<package>
  <name>segbot_arm_tutorials</name>
  <version>0.0.0</version>
  <description>This package provides a set of examples for controlling the robot arm.</description>

  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="jsinapov@gmail.com">Jivko Sinapov</maintainer>

  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GPLv3</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>kinova_msgs</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>segbot_arm_perception</build_depend>
  <build_depend>moveit_utils</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>segbot_arm_manipulation</build_depend>
  <build_depend>bwi_msgs</build_depend>

  <run_depend>kinova_msgs</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>segbot_arm_perception</run_depend>
  <run_depend>moveit_utils</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>segbot_arm_manipulation</run_depend>
  <run_depend>bwi_msgs</run_depend>

</package>
