<package>
  <name>segbot_bringup</name>
  <version>0.3.2</version>
  <description>
    Contains launch files and runtime scripts necessary for running
    segbots in simulation and in the real world.
  </description>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/segbot_bringup</url>
  <url type="repository">https://github.com/utexas-bwi/segbot.git</url>
  <url type="bugtracker">https://github.com/utexas-bwi/segbot/issues</url>

  <author email="piyushk@gmail.com">Piyush Khandelwal</author>
  <maintainer email="piyushk@gmail.com">Piyush Khandelwal</maintainer>
  <maintainer email="jack.oquin@gmail.com">Jack O'Quin</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend> <!-- unit test only -->

  <run_depend>joint_state_publisher</run_depend>
  <run_depend>python-netifaces</run_depend>
  <run_depend version_gte="1.9.10">robot_state_publisher</run_depend>
  <run_depend>segbot_description</run_depend>
  <run_depend>segbot_sensors</run_depend>
  <run_depend>segway_rmp</run_depend>
  <run_depend>tf</run_depend>

</package>
