<package format="2">
  <name>segbot_bringup</name>
  <version>0.3.3</version>
  <description>
    Contains launch files and runtime scripts necessary for running
    segbots in simulation and in the real world.
  </description>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/segbot_bringup</url>
  <url type="repository">https://github.com/utexas-bwi/segbot.git</url>
  <url type="bugtracker">https://github.com/utexas-bwi/segbot/issues</url>

  <author email="piyushk@gmail.com">Piyush Khandelwal</author>
  <maintainer email="piyushk@gmail.com">Piyush Khandelwal</maintainer>
  <maintainer email="jack.oquin@gmail.com">Jack O'Quin</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>python-netifaces</exec_depend>
  <exec_depend version_gte="1.9.10">robot_state_publisher</exec_depend>
  <exec_depend>segbot_description</exec_depend>
  <exec_depend>segbot_sensors</exec_depend>
  <exec_depend>segway_rmp</exec_depend>
  <exec_depend>tf</exec_depend>

  <test_depend>roslaunch</test_depend>

</package>
