<package>
  <name>segbot_description</name>
  <version>0.1.2</version>
  <description>Contains URDF descriptions of all robot components for Segway RMP 50 based robots at the University of Texas at Austin. Since the sensors on a given robot are configurable, this package also contains all the different robot configurations.</description>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/segbot_description</url>
  <url type="repository">https://github.com/utexas-bwi/segbot.git</url>
  <url type="bugtracker">https://github.com/utexas-bwi/segbot/issues</url>

  <author>Piyush Khandelwal</author>
  <maintainer email="piyushk@gmail.com">Piyush Khandelwal</maintainer>
  <maintainer email="jack.oquin@gmail.com">Jack O'Quin</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>pr2_description</run_depend> <!-- kinect mesh -->

</package>
